# tjhome

./: .Rbuildignore  .Rprofile  .gitignore  00-dagster_repository.html  01-air_quality.html  404.html  CHANGELOG.md  DESCRIPTION  Dockerfile  LICENSE.html  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  index.html  pkgdown.yml  pyproject.toml  robots.txt  sandbox.ipynb  search.json  settings.ini  sitemap.xml
.github/workflows/: R-CMD-check.yaml  automerge.yml  deployment.yml  testing.yml
R/: jobs.R  sensibo.R  tjhome-package.R
airflow/: airflow.cfg  unittests.cfg
dev/: dev-utils.R
docs/: 404.html  authors.html  index.html  pkgdown.yml
docs/news/: index.html
docs/reference/: dev-cicd.html  index.html  job_maintain_ac_temp.html  run_jobs.html  sensibo.html  tjhome-package.html
inst/: WORDLIST
man/: job_maintain_ac_temp.Rd  run_jobs.Rd  sensibo.Rd  tjhome-package.Rd
news/: index.html
notebooks/: 00-dagster_repository.ipynb  01-air_quality.ipynb  02-smart_home_action.ipynb  _quarto.yml  dagster-air_quality.ipynb  dagster-repository.ipynb  devices.ipynb  google.ipynb  index.ipynb  nbdev.yml  sidebar.yml
reference/: index.html  job_maintain_ac_temp.html  sensibo.html  tjhome-package.html
scripts/: airflow_init.sh
terraform/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
tests/: testthat.R
tests/testthat/: test-jobs.R  test-sensibo.R
tjhome/: _modidx.py  air_quality.py  devices.py  google.py  jobs.py  repository.py  sources.py
tjhome/dagster/: air_quality.py  repository.py
(+1 files in other folders)
