[tool.poetry]
name = "tjhome"
version = "0.1.0"
description = "TJ's Smart Home Utilities"
authors = ["TJ Palanca <mail@tjpalanca.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
tuya-iot-py-sdk = "^0.6.6"
dagster = "^0.15.6"
dagit = "^0.15.6"
types-requests = "^2.28.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
flake8 = "^4.0.1"
black = "^22.6.0"
mypy = "^0.961"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
