[tool.poetry]
name = "tjhome"
version = "0.1.0"
description = "TJ's Smart Home Utilities"
authors = ["TJ Palanca <mail@tjpalanca.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://tjpalanca.com/tjhome"
documentation = "https://tjpalanca.com/tjhome"
repository = "https://github.com/tjpalanca/tjhome.git"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
tuya-iot-py-sdk = "^0.6.6"
dagster = "^0.15.6"
dagit = "^0.15.6"
types-requests = "^2.28.1"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
tjutils = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
